adding chrome, dropbox and a recovery of a letgz backup

--- a/base-scala/Dockerfile
+++ b/base-scala/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:jessie
 RUN sed -i -e 's/httpredir.debian.org/ftp.us.debian.org/' /etc/apt/sources.list 
 RUN groupadd -g 1000 app && useradd -g 1000 -u 1000 -d /app app -m -s /bin/bash ; chown -Rv app:app /app/
-RUN apt-get update && apt-get -y install git wget sudo jwm curl vim net-tools python make gcc g++ ssh iceweasel tightvncserver tmux xterm
+RUN apt-get update && apt-get -y install git wget sudo jwm curl vim net-tools python make gcc g++ ssh iceweasel tightvncserver tmux xterm chromium chromium-l10n
 RUN echo "app ALL=(ALL) NOPASSWD: ALL" >>/etc/sudoers ; sed -i 's/requiretty/!requiretty/' /etc/sudoers
 RUN curl -sL https://deb.nodesource.com/setup_5.x | bash - ; apt-get -y install nodejs
 COPY *.txt /
