creating a linkable, shared dropbox folder, fixing an issue

--- a/devenv/Dockerfile
+++ b/devenv/Dockerfile
@@ -3,8 +3,7 @@ USER app
 WORKDIR /app
 COPY _password /app/_password 
 COPY start-all.sh /app/bin/
-RUN mkdir /app/IdeaProjects /app/.IdeaIC15 ;\
-    echo "app:$(cat /app/_password)" | sudo chpasswd ;\
+RUN echo "app:$(cat /app/_password)" | sudo chpasswd ;\
     mkdir .vnc ;\
     printf "$(cat /app/_password)"'\n'"$(cat /app/_password)"'\nn\n' | vncpasswd -f  >.vnc/passwd ;\
     chmod 0600 .vnc/passwd ;\
@@ -14,5 +13,5 @@ RUN mkdir /app/IdeaProjects /app/.IdeaIC15 ;\
 COPY predef.scala .ammonite/
 COPY id_* .ssh/
 EXPOSE 6080 5900
-VOLUME /app/data
+VOLUME /app/Dropbox
 CMD bash /app/bin/start-all.sh
